--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -1,69 +1,89 @@
 <ss-lib-utility-button [popoverTriggerFor]="dropdownColumn" />
 
 <ss-lib-dropdown-list #dropdownColumn>
-	<ss-lib-dropdown-group [label]="'Показываемые'">
-		<ss-lib-dropdown-draggable-group-list
-			(dropItem)="onDropdownItemDrop($event)"
-		>
-			@for (column of dropdownColumnsVisible(); track column) {
-				<ss-lib-dropdown-item>
-					<div class="column-item__content">
-						@let index = getControlIndexForColumn(column);
+	@if (dropdownColumnsVisible().length > 0) {
+		<ss-lib-dropdown-group [label]="'Отображаемые'">
+			<div
+				id="visibleList"
+				class="draggable-list"
+				cdkDropList
+				[cdkDropListData]="dropdownColumnsVisible()"
+				[cdkDropListConnectedTo]="['hiddenList']"
+				(cdkDropListDropped)="onDropdownItemDrop($event)"
+			>
+				@for (column of dropdownColumnsVisible(); track column) {
+					<ss-lib-dropdown-item
+						cdkDrag
+						class="draggable-item"
+					>
+						<div class="column-item__content">
+							@let ctrl = getControlForColumn(column);
 
-						<ss-lib-checkbox
-							[formControl]="columnsForm.controls[index]"
-						></ss-lib-checkbox>
+							<ss-lib-checkbox
+								[formControl]="ctrl"
+							></ss-lib-checkbox>
 
-						<ss-lib-text
-							[type]="TextType.BodySm"
-							[weight]="TextWeight.Regular"
-							[color]="Colors.TextBody3"
-						>
-							{{ column.name }}
-						</ss-lib-text>
+							<ss-lib-text
+								[type]="TextType.BodySm"
+								[weight]="TextWeight.Regular"
+								[color]="Colors.TextBody3"
+							>
+								{{ column.name }}
+							</ss-lib-text>
 
-						<ss-lib-icon
-							[height]="'16'"
-							[width]="'16'"
-							[icon]="IconType.Drag"
-						/>
-					</div>
-				</ss-lib-dropdown-item>
-			}
-		</ss-lib-dropdown-draggable-group-list>
-	</ss-lib-dropdown-group>
+							<ss-lib-icon
+								[height]="'16'"
+								[width]="'16'"
+								[icon]="IconType.Drag"
+							/>
+						</div>
+					</ss-lib-dropdown-item>
+				}
+			</div>
+		</ss-lib-dropdown-group>
+	}
 
-	<ss-lib-dropdown-group [label]="'Скрытые'">
-		<ss-lib-dropdown-draggable-group-list
-			(dropItem)="onDropdownItemDrop($event)"
-		>
-			@for (column of dropdownColumnsUnVisible(); track column) {
-				<ss-lib-dropdown-item>
-					<div class="column-item__content">
-						@let index = getControlIndexForColumn(column);
+	@if (dropdownColumnsUnVisible().length > 0) {
+		<ss-lib-dropdown-group [label]="'Скрытые'">
+			<div
+				id="hiddenList"
+				cdkDropList
+				class="draggable-list"
+				[cdkDropListData]="dropdownColumnsUnVisible()"
+				[cdkDropListConnectedTo]="['visibleList']"
+				(cdkDropListDropped)="onDropdownItemDrop($event)"
+			>
+				@for (column of dropdownColumnsUnVisible(); track column) {
+					<ss-lib-dropdown-item
+						cdkDrag
+						class="draggable-item"
+					>
+						<div class="column-item__content">
+							@let ctrl = getControlForColumn(column);
 
-						<ss-lib-checkbox
-							[formControl]="columnsForm.controls[index]"
-						></ss-lib-checkbox>
+							<ss-lib-checkbox
+								[formControl]="ctrl"
+							></ss-lib-checkbox>
 
-						<ss-lib-text
-							[type]="TextType.BodySm"
-							[weight]="TextWeight.Regular"
-							[color]="Colors.TextBody3"
-						>
-							{{ column.name }}
-						</ss-lib-text>
+							<ss-lib-text
+								[type]="TextType.BodySm"
+								[weight]="TextWeight.Regular"
+								[color]="Colors.TextBody3"
+							>
+								{{ column.name }}
+							</ss-lib-text>
 
-						<ss-lib-icon
-							[height]="'16'"
-							[width]="'16'"
-							[icon]="IconType.Drag"
-						/>
-					</div>
-				</ss-lib-dropdown-item>
-			}
-		</ss-lib-dropdown-draggable-group-list>
-	</ss-lib-dropdown-group>
+							<ss-lib-icon
+								[height]="'16'"
+								[width]="'16'"
+								[icon]="IconType.Drag"
+							/>
+						</div>
+					</ss-lib-dropdown-item>
+				}
+			</div>
+		</ss-lib-dropdown-group>
+	}
 </ss-lib-dropdown-list>
 
 <div class="container">
