--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -49,7 +49,7 @@
 					<div class="item-align--center drag-action__content">
 						<ss-lib-checkbox
 							[formControl]="masterCheckboxCtrl"
-							[type]="masterCheckboxType()"
+							[indeterminate]="false"
 						/>
 
 						<ss-lib-text
