Обновление токенов из фигмы

--- a/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
+++ b/projects/front-components/src/lib/shared/styles/_variables/_alias.scss
@@ -1,5 +1,7 @@
 /* Alias */
 :root {
+	/* Value */
+	/* color */
 	--error-100: var(--red-100);
 	--error-200: var(--red-200);
 	--error-25: var(--red-25);
