feature/3353-table-styles: fixed dragging from invisible columns

--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -21,6 +21,7 @@
 
 							<ss-lib-checkbox
 								[formControl]="ctrl"
+								(click)="updateColumnVisibility(column)"
 							></ss-lib-checkbox>
 
 							<ss-lib-text
@@ -63,6 +64,7 @@
 
 							<ss-lib-checkbox
 								[formControl]="ctrl"
+								(click)="updateColumnVisibility(column)"
 							></ss-lib-checkbox>
 
 							<ss-lib-text
