--- a/projects/front-components/src/lib/components/avatar/avatar.component.scss
+++ b/projects/front-components/src/lib/components/avatar/avatar.component.scss
@@ -10,7 +10,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: 1px solid var(--app-avatar-border, var(--border-primary));
+	border: var(--border-width-sm) solid var(--border-primary);
 	background: var(--surface-primary);
 	border-radius: var(--border-radius-round);
 	overflow: hidden;
