feature/3353-table-styles: replace checkbox with latest updates

--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -107,7 +107,7 @@
 					<div class="item-align--center drag-action__content">
 						<ss-lib-checkbox
 							[formControl]="masterCheckboxCtrl"
-							[indeterminate]="false"
+							[indeterminate]="getMasterCheckboxIndeterminate()"
 						/>
 
 						<ss-lib-text
