Revert "Merge branch 'colors/1906' into 'main'"
This reverts merge request !200

--- a/projects/front-components/src/lib/components/avatar/avatar.component.html
+++ b/projects/front-components/src/lib/components/avatar/avatar.component.html
@@ -4,14 +4,14 @@
 			<ss-lib-text
 				[type]="TextType.BodyMd"
 				[weight]="TextWeight.Semibold"
-				[color]="Colors.IconAction2"
+				[color]="Colors.IconAction"
 			>
 				{{ username() }}
 			</ss-lib-text>
 		} @else {
 			<ss-lib-icon
 				[icon]="IconType.User01"
-				[color]="Colors.IconAction2"
+				[color]="Colors.IconAction"
 			></ss-lib-icon>
 		}
 	} @else {
