--- a/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.html
+++ b/projects/front-components/src/lib/components/toggle-icon/toggle-icon.component.html
@@ -10,7 +10,7 @@
 			[icon]="toggleIcon()!"
 			[height]="'16'"
 			[width]="'16'"
-			[color]="Colors.IconAction2"
+			[color]="Colors.IconAction"
 			[class.hidden]="checked()"
 		/>
 
@@ -19,7 +19,7 @@
 			[icon]="toggleIcon()!"
 			[height]="'16'"
 			[width]="'16'"
-			[color]="Colors.IconAction2"
+			[color]="Colors.IconAction"
 			[class.hidden]="!checked()"
 		/>
 	</div>
