--- a/projects/front-components/src/lib/components/badge/badge.component.scss
+++ b/projects/front-components/src/lib/components/badge/badge.component.scss
@@ -15,19 +15,19 @@
 	}
 
 	&.default {
-		outline: var(--border-width-sm) solid var(--border-primary);
+		outline: 1px solid var(--border-primary);
 	}
 
 	&.success {
-		outline: var(--border-width-sm) solid var(--border-success);
+		outline: 1px solid var(--border-success);
 	}
 
 	&.warning {
-		outline: var(--border-width-sm) solid var(--border-warning);
+		outline: 1px solid var(--border-warning);
 	}
 
 	&.error {
-		outline: var(--border-width-sm) solid var(--border-error);
+		outline: 1px solid var(--border-error);
 	}
 
 	&.square {
