--- a/projects/front-components/src/lib/components/buttons/avatar-button/avatar-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/avatar-button/avatar-button.component.scss
@@ -10,7 +10,7 @@
 }
 
 .avatar-button:hover {
-	--app-avatar-border: var(--border-focus);
+	--app-avatar-border: var(--border-secondary);
 }
 
 .avatar-button:focus-visible {
