feature/3353-add-data-to-table: add subGroups to config, use mock data

--- a/projects/test-app/src/app/table-example/table-example.component.html
+++ b/projects/test-app/src/app/table-example/table-example.component.html
@@ -94,7 +94,7 @@
 		class="ss-table"
 		[hasBorderRadius]="true"
 		[showCellBorders]="true"
-		[columns]="visibleColumns()"
+		[columns]="visibleColumnsIds()"
 	>
 		<thead>
 			<tr ssThGroup>
