feature/3353-add-data-to-table: add logic for oper plan structure

--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
@@ -6,7 +6,7 @@
 }
 
 .ss-table {
-	//width: 100%; ! Если нужно, чтобы не вылазила за ширину страницы
+	//width: 100%;
 	position: relative;
 	border-collapse: separate;
 	border-spacing: 0;
