--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
@@ -104,10 +104,14 @@
 							*ssHead="column.id"
 							ssTh
 							[attr.rowspan]="
-								column.subColumns || column.subGroups ? 1 : 2
+								!column.subColumns && !column.subGroups
+									? 2
+									: null
 							"
 							[attr.colspan]="
-								column.subColumns ? column.subColumns.length : 1
+								column.subColumns
+									? column.subColumns.length
+									: null
 							"
 							[resizable]="true"
 						>
@@ -142,7 +146,7 @@
 			</tr>
 			<tr ssThGroup>
 				@for (column of visibleColumns(); track column) {
-					@if (column.subColumns?.length) {
+					@if (column.subColumns) {
 						@for (
 							subColumnId of column.subColumns;
 							track subColumnId
