--- a/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.scss
+++ b/projects/front-components/src/lib/components/dropdown/dropdown-list/dropdown-list.component.scss
@@ -18,15 +18,16 @@
 	ss-lib-dropdown-group {
 		position: relative;
 		display: flex;
-		font: var(--tui-font-text-xs);
-		font-weight: bold;
-		color: var(--tui-text-primary);
 		flex-direction: column;
-		line-height: 1rem;
 
 		&::before {
 			content: attr(data-label);
 			white-space: normal;
+			font-family: var(--type-font-family-body), serif;
+			font-size: var(--font-size-body-sm);
+			font-weight: 500;
+			color: var(--text-body-2);
+			padding: 12px 16px 4px 10px;
 			word-break: break-word;
 		}
 	}
