--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.scss
@@ -16,8 +16,17 @@
 }
 
 .column-item__content {
+	width: 100%;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+	gap: 8px;
+
+	&_label {
+		display: flex;
+		align-items: flex-start;
+		gap: 8px;
+	}
 }
 
 .drag-action__content {
