feature/fix-master-checkbox-logic: fix logic of master checkbox on the table

--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
@@ -171,7 +171,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			@for (row of data(); track row.id) {
+			@for (row of data(); track row.id; let idxRow = $index) {
 				<tr
 					ssTr
 					draggable="true"
@@ -198,9 +198,7 @@
 									<!-- Чекбокс только для колонки 'tov' -->
 									@if (column.id === 'tov') {
 										<ss-lib-checkbox
-											[formControl]="
-												getRowCheckboxControl($index)
-											"
+											[formControl]="getRowCheckboxControl(idxRow)"
 										></ss-lib-checkbox>
 									}
 									<ss-lib-text
