--- a/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
+++ b/projects/test-app/src/app/table-oper-plan-example/table-oper-plan-example.component.html
@@ -205,7 +205,9 @@
 									<!-- Чекбокс только для колонки 'tov' -->
 									@if (column.id === 'tov') {
 										<ss-lib-checkbox
-											[formControl]="getRowCheckboxControl(idxRow)"
+											[formControl]="
+												getRowCheckboxControl(idxRow)
+											"
 										></ss-lib-checkbox>
 									}
 									<ss-lib-text
