--- a/projects/front-components/src/lib/components/table/th/th.component.scss
+++ b/projects/front-components/src/lib/components/table/th/th.component.scss
@@ -1,5 +1,5 @@
 :host {
-	background-color: var(--surface-information-2);
+	background-color: var(--surface-information);
 	height: 41px;
 	position: relative;
 	border: 1px solid var(--border-primary);
