--- a/projects/front-components/src/lib/components/checkbox/checkbox.component.scss
+++ b/projects/front-components/src/lib/components/checkbox/checkbox.component.scss
@@ -2,6 +2,7 @@
 	border: 1px solid var(--border-secondary);
 	width: 16px;
 	height: 16px;
+	box-sizing: border-box;
 	border-radius: 4px;
 	display: flex;
 	justify-content: center;
