--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -621,6 +621,9 @@
 <!--		[formControl]="checkBox3"-->
 <!--	></ss-lib-checkbox>-->
 <!--</div>-->
+Checkbox
+<ss-lib-checkbox [indeterminate]="true"></ss-lib-checkbox>
+Checkbox
 
 <div class="otp">
 	<ss-lib-otp-input [formControl]="otpCtrl"></ss-lib-otp-input>
