fix util-button border radius

--- a/projects/front-components/src/lib/components/buttons/utility-button/utility-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/utility-button/utility-button.component.scss
@@ -1,7 +1,7 @@
 button.custom-button.type-utility {
 	padding: 2px;
 	background: transparent;
-	border-radius: var(--border-radius-sm);
+	border-radius: var(--border-radius-xs);
 }
 
 .hovered button.custom-button.type-utility,
