--- a/projects/front-components/src/lib/components/datepicker/datepicker-calendar/datepicker-calendar.component.html
+++ b/projects/front-components/src/lib/components/datepicker/datepicker-calendar/datepicker-calendar.component.html
@@ -4,5 +4,6 @@
 		[min]="min()!"
 		[max]="max()!"
 		(dayClick)="onDayClick($event)"
+		(todaySelected)="onTodaySelected($event)"
 	></ss-lib-calendar>
 </ng-template>
