--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -32,6 +32,11 @@
 			[text]="'Success Toast'"
 			(click)="showToastSuccess()"
 		/>
+		<ss-lib-button
+			[type]="ButtonType.Primary"
+			[text]="'Toast с кнопкой Пнока'"
+			(click)="showToastWithButton()"
+		/>
 	</div>
 
 	<div style="display: flex; gap: 12px">
